<resources>
    <string name="app_name">InsuranceBazar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SignUp">SignUp</string>
    <string name="allreadyaccount">All Ready Have Account</string>
    <string name="forgotpasstxt">Forgot Password</string>
    <string name="logintxt">orloginwith</string>
    <string name="SignIn">SignIn</string>
    <string name="Home">Home</string>
    <string name="products">Product</string>
    <string name="policy">Policy</string>
    <string name="profile_username">Ali Abid</string>
    <string name="contact_information">Haideraly@gmailcom</string>
    <string name="your_full_name">Haider</string>
    <string name="your_phone_number">123456789</string>
    <string name="your_email_address">xyz123</string>
    <string name="promotion_title">Abc</string>
    <string name="promotion_code">123</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>